# embassy-esp32-c6

./: .gitignore  FINAL_REPORT.md  README.md  TASK.md
.github/workflows/: ci.yml  deploy.yml
docs/project/: curriculum.md  hardware-kit.md  progress.md  source-policy.md  support-matrix.md  versions.md  writing-guide.md
docs/research/: embassy.md  esp-rs.md  esp32c3-embassy.md  esp32c6-hardware.md  keyball-embassy.md  luhsoccer-firmware.md  weird-features-draft.md  weird-features-rust.md
examples/: Cargo.toml
examples/.cargo/: config.toml
examples/01-blinky/: Cargo.toml
examples/01-blinky/src/: main.rs
examples/02-button/: Cargo.toml
examples/02-button/src/: main.rs
examples/03-uart/: Cargo.toml
examples/03-uart/src/: main.rs
examples/04-i2c/: Cargo.toml
examples/04-i2c/src/: main.rs
examples/05-spi/: Cargo.toml
examples/05-spi/src/: main.rs
examples/06-embassy-tasks/: Cargo.toml  build.rs
examples/06-embassy-tasks/src/: main.rs
examples/07-channel/: Cargo.toml  build.rs
examples/07-channel/src/: main.rs
examples/08-wifi/: Cargo.toml
examples/08-wifi/src/: main.rs
examples/09-ble/: Cargo.toml
examples/09-ble/src/: main.rs
examples/10-esp-now/: Cargo.toml
examples/10-esp-now/src/: main.rs
examples/11-twai/: Cargo.toml
examples/11-twai/src/: main.rs
examples/12-sleep/: Cargo.toml
examples/12-sleep/src/: main.rs
examples/13-adc-pwm/: Cargo.toml  build.rs
examples/13-adc-pwm/src/: main.rs
examples/14-keymatrix/: Cargo.toml
examples/14-keymatrix/src/: main.rs
examples/15-ble-hid/: Cargo.toml
examples/15-ble-hid/src/: main.rs
examples/16-sensor-node/: Cargo.toml  build.rs
examples/16-sensor-node/src/: main.rs
examples/17-https/: Cargo.toml
examples/17-https/src/: main.rs
examples/18-rmt-ws2812/: Cargo.toml  build.rs
examples/18-rmt-ws2812/src/: main.rs
examples/19-pcnt/: Cargo.toml
examples/19-pcnt/src/: main.rs
examples/20-etm/: Cargo.toml
examples/20-etm/src/: main.rs
examples/21-ledc-fade/: Cargo.toml  build.rs
examples/21-ledc-fade/src/: main.rs
examples/final-wireless-button/: Cargo.toml  build.rs
examples/final-wireless-button/src/: app.rs  button.rs  config.rs  error.rs  heartbeat.rs  lib.rs  main.rs  power.rs  protocol.rs  radio.rs
scripts/: sync-project-docs.mjs
site/: astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
site/src/content/docs/: index.mdx  intro.md
site/src/content/docs/appendix/: arduino-map.md  esp-generate.md  glossary.md  troubleshooting.md
site/src/content/docs/deep-dive/: 01-intro.md  02-gpio-matrix.md  03-rmt.md  04-pcnt.md  05-etm.md  06-ledc-dma.md  07-mcpwm.md  08-lp-core.md  09-bus-and-bits.md  10-zukan.md
site/src/content/docs/keyboard/: 01-intro.md  02-architecture.md  03-matrix.md  04-scan-c6.md  05-keymap-state.md  06-split-comm.md  07-usb-hid.md  08-ble-hid.md  09-integration.md  10-ecosystem.md
site/src/content/docs/part01/: 01-goal.md  02-why-rust.md  03-what-is-c6.md  04-mcu-vs-pc.md  05-parts.md  06-volt-current.md  07-setup.md  08-new-project.md  09-flash-monitor.md  10-blinky.md
site/src/content/docs/part02/: 01-variables.md  02-mut.md  03-numbers.md  04-bool.md  05-functions.md  06-if.md  07-loop.md  08-while.md  09-for.md  10-array-tuple.md
site/src/content/docs/part03/: 01-struct.md  02-enum.md  03-match.md  04-option.md  05-result.md  06-methods.md  07-impl.md  08-ownership.md  09-borrow.md  10-lifetime.md
site/src/content/docs/part04/: 01-module.md  02-file-split.md  03-pub.md  04-crate.md  05-trait.md  06-generics.md  07-associated-type.md  08-error-design.md  09-state-machine.md  10-cpp-comparison.md
site/src/content/docs/part05/: 01-no-std.md  02-before-main.md  03-memory.md  04-stack.md  05-heap.md  06-static.md  07-panic.md  08-pac.md  09-hal.md  10-embedded-hal.md
site/src/content/docs/part06/: 01-gpio-output.md  02-gpio-input.md  03-pull-updown.md  04-button.md  05-debounce.md  06-gpio-interrupt.md  07-timer.md  08-ticker.md  09-timeout.md  10-watchdog.md
site/src/content/docs/part07/: 01-adc.md  02-voltage-divider.md  03-sensor-reading.md  04-pwm.md  05-led-brightness.md  06-servo.md  07-frequency.md  08-duty.md  09-hw-timer.md  10-mini-project.md
site/src/content/docs/part08/: 01-uart-basics.md  02-uart-async.md  03-i2c-basics.md  04-i2c-sensor.md  05-i2c-errors.md  06-spi-basics.md  07-spi-device.md  08-bus-sharing.md  09-twai-basics.md  10-twai-comm.md
site/src/content/docs/part09/: 01-sync-vs-async.md  02-async-await.md  03-future.md  04-task.md  05-spawner.md  06-embassy-time.md  07-select.md  08-join.md  09-channel-signal-mutex.md  10-cancel-backpressure.md
site/src/content/docs/part10/: 01-wifi-basics.md  02-station.md  03-access-point.md  04-ip-address.md  05-dhcp.md  06-tcp.md  07-udp.md  08-dns.md  09-http.md  10-mqtt-or-server.md
site/src/content/docs/part11/: 01-ble-basics.md  02-advertising.md  03-service-characteristic.md  04-peripheral.md  05-central.md  06-ble-button.md  07-espnow-basics.md  08-espnow-reliability.md  09-ieee802154.md  10-thread-zigbee.md
site/src/content/docs/part12/: 01-light-sleep.md  02-deep-sleep.md  03-wakeup.md  04-power-measurement.md  05-flash-config.md  06-logging-debug.md  07-error-recovery.md  08-project-structure.md  09-testing.md  10-final-project.md
site/src/content/docs/robot/: 01-intro.md  02-system.md  03-basestation.md  04-radio.md  05-maincontroller.md  06-observable.md  07-uart-protocol.md  08-motion.md  09-kicker-safety.md  10-failsafe.md  11-extensibility.md  12-lessons.md
site/src/content/docs/sensor-node/: 01-intro.md  02-driver-crates.md  03-sensor-c6.md  04-rtc-ram.md  05-duty-cycle.md  06-clock.md  07-https.md  08-error-design.md  09-peripherals-types.md  10-roadmap.md
