[package]
name = "sensor-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "sensor-node"
path = "src/main.rs"

# ログ出口の切替。既定は probe-rs + defmt(RTT)、espflash featureでUSBシリアルへ。
[features]
default = ["probe-rs"]
probe-rs = ["dep:rtt-target"]
espflash = ["dep:esp-println"]

[dependencies]
esp-hal.workspace = true
esp-rtos.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-println = { workspace = true, optional = true }
esp-backtrace.workspace = true
defmt.workspace = true
rtt-target = { workspace = true, optional = true }
embassy-executor.workspace = true
embassy-time.workspace = true
bme280-rs.workspace = true
