[package]
name = "https"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "https"
path = "src/main.rs"

[dependencies]
esp-hal.workspace = true
# 無線使用時はesp-rtosにesp-radio/esp-alloc連携のfeatureが必要
esp-rtos = { workspace = true, features = ["esp-radio", "esp-alloc"] }
# wifiはesp-radio 0.18のstable feature
esp-radio = { workspace = true, features = ["wifi"] }
esp-alloc.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-println.workspace = true
esp-backtrace.workspace = true
log.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-net.workspace = true
embedded-io-async.workspace = true
static_cell.workspace = true
# HTTPSクライアント（TLSはembedded-tls = TLS 1.3のみ）
reqwless.workspace = true
# 直接は使わないが、embedded-tls 0.18と互換のあるrc版にderを固定するために明示する
der.workspace = true
