[package]
name = "rmt-ws2812"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rmt-ws2812"
path = "src/main.rs"

# ログ/書き込みの出口を feature で切替える（詳細は examples/Cargo.toml の解説）:
#   - default = ["probe-rs"]: defmt → rtt-target(RTT) → `probe-rs run`
#   - --no-default-features --features espflash: defmt → esp-println → `espflash`
[features]
default = ["probe-rs"]
probe-rs = ["dep:rtt-target"]
espflash = ["dep:esp-println"]

[dependencies]
esp-hal.workspace = true
esp-rtos.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-backtrace.workspace = true
defmt.workspace = true
rtt-target = { workspace = true, optional = true }
esp-println = { workspace = true, optional = true }
embassy-executor.workspace = true
embassy-time.workspace = true
