[package]
name = "etm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "etm"
path = "src/main.rs"

[features]
default = ["probe-rs"]
probe-rs = ["dep:rtt-target"]
espflash = ["dep:esp-println"]

[dependencies]
esp-hal.workspace = true
esp-rtos.workspace = true
esp-bootloader-esp-idf.workspace = true
# defmtログの2つの出口: probe-rs(RTT)ではrtt-target、espflashではesp-println
defmt.workspace = true
rtt-target = { workspace = true, optional = true }
esp-println = { workspace = true, optional = true }
esp-backtrace.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
